if(DEFINED NO_OPENCV)
  message("core no opencv")
  add_subdirectory(core)
  add_subdirectory(custom)
  add_subdirectory(utils)
  add_subdirectory(ive)
  add_subdirectory(retina_face)
  add_subdirectory(object_detection/mobiledetv2)
  add_subdirectory(object_detection/yolov3)
  add_subdirectory(motion_detection)
  add_subdirectory(object_detection/yolox)
  add_subdirectory(object_detection/ppyoloe)
  add_subdirectory(sound_classification)
  add_subdirectory(deepsort)
  add_subdirectory(face_attribute)
  set(CORE_INTERFACE cviai_core_phobos.cpp)
else()
  if (DEFINED SIMPLY_MODEL)
    add_subdirectory(core)
    add_subdirectory(utils)
    add_subdirectory(object_detection/mobiledetv2)
    add_subdirectory(motion_detection)
    add_subdirectory(ive)
    set(CORE_INTERFACE cviai_core_phobos.cpp)
  else()
    if ("${ENABLE_CVIAI_CV_UTILS}" STREQUAL "ON")
      add_compile_definitions(ENABLE_CVIAI_CV_UTILS)
    endif()
    add_subdirectory(core)
    add_subdirectory(custom)
    add_subdirectory(utils)
    add_subdirectory(face_attribute)
    add_subdirectory(face_quality)
    add_subdirectory(liveness)
    add_subdirectory(mask_classification)
    add_subdirectory(hand_classification)
    add_subdirectory(hand_keypoint)
    add_subdirectory(hand_keypoint_classification)
    add_subdirectory(object_detection/yolov8)
    add_subdirectory(osnet)
    add_subdirectory(retina_face)
    add_subdirectory(object_detection/yolov3)
    add_subdirectory(object_detection/yolov5)
    add_subdirectory(object_detection/yolov6)
    add_subdirectory(object_detection/yolo)
    add_subdirectory(object_detection/ppyoloe)
    add_subdirectory(thermal_face_detection)
    add_subdirectory(thermal_person_detection)
    add_subdirectory(object_detection/mobiledetv2)
    add_subdirectory(mask_face_recognition)
    add_subdirectory(deepsort)
    add_subdirectory(sound_classification)
    add_subdirectory(segmentation)
    add_subdirectory(license_plate_recognition)
    add_subdirectory(license_plate_detection)
    add_subdirectory(alphapose)
    add_subdirectory(fall_detection)
    add_subdirectory(eye_classification)
    add_subdirectory(yawn_classification)
    add_subdirectory(face_landmarker)
    add_subdirectory(incar_object_detection)
    add_subdirectory(smoke_classification)
    add_subdirectory(ive)
    add_subdirectory(tamper_detection)
    add_subdirectory(motion_detection)
    add_subdirectory(face_mask_detection)
    add_subdirectory(object_detection/yolox)
    add_subdirectory(human_keypoints_detection/yolov8_pose)
    add_subdirectory(human_keypoints_detection/simcc)
    add_subdirectory(image_classification)
    add_subdirectory(license_plate_recognitionv2)
    set(CORE_INTERFACE cviai_core.cpp)
  endif()
endif()



include_directories(${CMAKE_CURRENT_SOURCE_DIR}/core
                    ${CMAKE_CURRENT_SOURCE_DIR}/utils
                    ${CMAKE_CURRENT_SOURCE_DIR}/ive)
if (DEFINED SIMPLY_MODEL)
set(CORE_SRCS cviai_types_mem.cpp
              cviai_rescale_bbox.cpp
              ${CORE_INTERFACE})
else()
set(CORE_SRCS cviai_types_mem.cpp
              cviai_rescale_bbox.cpp
              cviai_utils.cpp
              cviai_custom.cpp
              ${CORE_INTERFACE})
endif()

project(cviai_core)
add_library(${PROJECT_NAME} OBJECT ${CORE_SRCS})
